--- a/web_app.html
+++ b/web_app.html
@@ -1665,8 +1665,8 @@
                 const hasEnough = quanhash >= 500000;
                 
                 document.getElementById('withdrawContent').innerHTML = `
-                    <div style="max-height: 80vh; overflow-y: auto;">
-                        <div style="padding: 20px;">
+                    <div style="display: flex; flex-direction: column; height: 100%; max-height: 80vh;">
+                        <div style="flex: 1; overflow-y: auto; padding: 20px;">
                             <div style="text-align: center; margin-bottom: 20px;">
                                 <div style="font-size: 48px; margin-bottom: 10px;">💎</div>
                                 <div style="font-size: 18px; font-weight: bold;">Вывод средств</div>
@@ -1686,10 +1686,10 @@
                                 <input type="text" id="usdtAddress" placeholder="0x0000...0000" style="width: 100%; padding: 12px; background: rgba(255,255,255,0.1); border: 1px solid rgba(102, 126, 234, 0.3); border-radius: 10px; color: white; font-size: 14px;">
                             </div>
                             <button id="withdrawBtn" class="action-btn" onclick="withdraw()" style="width: 100%; margin-bottom: 20px; ${hasEnough ? '' : 'opacity: 0.5; cursor: not-allowed;'}" ${hasEnough ? '' : 'disabled'}>${hasEnough ? '💸 Вывести' : '⚠️ Недостаточно QuanHash'}</button>
-                            <div style="border-top: 2px solid rgba(255,255,255,0.1); padding-top: 20px; margin-top: 20px;">
-                                <div style="font-size: 16px; font-weight: bold; margin-bottom: 15px; text-align: center;">📜 История выводов</div>
-                                <div id="withdrawHistory" style="max-height: 150px; overflow-y: auto;"></div>
-                            </div>
+                        </div>
+                        <div style="border-top: 2px solid rgba(255,255,255,0.1); padding: 20px; background: inherit;">
+                            <div style="font-size: 16px; font-weight: bold; margin-bottom: 15px; text-align: center;">📜 История выводов</div>
+                            <div id="withdrawHistory" style="max-height: 150px; overflow-y: auto;"></div>
                         </div>
                     </div>
                 `;
