Add scroll back to withdraw modal with max-height

--- a/web_app.html
+++ b/web_app.html
@@ -986,7 +986,7 @@
 
     <!-- Withdraw Modal -->
     <div id="withdrawModal" class="modal">
-        <div class="modal-content" style="overflow: visible;">
+        <div class="modal-content" style="max-height: 80vh; overflow-y: auto;">
             <div class="modal-header">
                 <div class="modal-title">💸 Вывод средств</div>
                 <button class="close-btn" onclick="closeModal('withdrawModal')">✕</button>
