Remove double border in withdraw modal using custom class

--- a/web_app.html
+++ b/web_app.html
@@ -499,6 +499,10 @@
             pointer-events: none;
             opacity: 0.3;
         }
+        
+        .modal-content-without-border::before {
+            content: none;
+        }
 
         .modal-header {
             display: flex;
@@ -986,7 +990,7 @@
 
     <!-- Withdraw Modal -->
     <div id="withdrawModal" class="modal">
-        <div class="modal-content" style="max-height: 80vh; overflow-y: auto;">
+        <div class="modal-content modal-content-without-border" style="max-height: 80vh; overflow-y: auto;">
             <div class="modal-header">
                 <div class="modal-title">💸 Вывод средств</div>
                 <button class="close-btn" onclick="closeModal('withdrawModal')">✕</button>
