--- a/admin.html
+++ b/admin.html
@@ -204,7 +204,7 @@
 
         <div class="tabs-container">
             <button class="tab-btn active" onclick="switchTab('users')">👥 Пользователи</button>
-            <button class="tab-btn" onclick="switchTab('withdrawals')">💸 Выводы</button>
+            <button class="tab-btn" onclick="switchTab('withdrawals')">💸 Выводы<span id="withdrawalsBadge" style="background:linear-gradient(135deg,#f59e0b,#d97706);color:#fff;padding:4px 10px;border-radius:12px;font-size:12px;font-weight:700;margin-left:10px;display:none;box-shadow:0 4px 12px rgba(245,158,11,0.4);"></span></button>
             <button class="tab-btn" onclick="switchTab('questions')">
                 💬 Вопросы 
                 <span id="questionsBadge" style="display:none;background:linear-gradient(135deg,#ef4444,#dc2626);color:#fff;padding:2px 6px;border-radius:8px;font-size:10px;font-weight:700;margin-left:5px;">0</span>
