--- a/web_app.html
+++ b/web_app.html
@@ -282,13 +282,13 @@
             width: 280px;
             height: 280px;
             margin: 30px auto;
-            border-radius: 50px;
+            border-radius: 50%;
             position: relative;
             background: linear-gradient(135deg, rgba(102, 126, 234, 0.8) 0%, rgba(118, 75, 162, 0.8) 100%);
             border: 4px solid transparent;
             cursor: pointer;
             box-shadow: 0 15px 50px rgba(102, 126, 234, 0.3);
-            transition: all 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
+            transition: all 0.08s cubic-bezier(0.25, 1.8, 0.75, 0.5);
             user-select: none;
             -webkit-tap-highlight-color: transparent;
             -webkit-touch-callout: none;
@@ -299,6 +299,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
         }
 
         .tap-button svg {
@@ -326,10 +327,22 @@
                 filter: brightness(1);
                 box-shadow: 0 15px 50px rgba(102, 126, 234, 0.5), 0 0 0 0 rgba(240, 147, 251, 0.8);
             }
+            15% {
+                transform: scale(0.75);
+                filter: brightness(1.6);
+                box-shadow: 0 0 5px rgba(102, 126, 234, 1), 0 0 80px 50px rgba(240, 147, 251, 1);
+            }
+            30% {
+                transform: scale(1.08);
+                filter: brightness(1.2);
+                box-shadow: 0 20px 70px rgba(102, 126, 234, 0.9), 0 0 100px 40px rgba(240, 147, 251, 0.9);
+            }
             50% {
-                transform: scale(0.85);
-                filter: brightness(1.4);
-                box-shadow: 0 5px 20px rgba(102, 126, 234, 0.8), 0 0 60px 30px rgba(240, 147, 251, 1);
+                transform: scale(0.98);
+                filter: brightness(1.1);
+            }
+            70% {
+                transform: scale(1.05);
             }
             100% {
                 transform: scale(1);
@@ -351,16 +364,14 @@
         }
         
         .tap-button.tap-pressed {
-            animation: tapPress 0.25s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-            transform: scale(0.85) !important;
-            box-shadow: 0 5px 30px rgba(102, 126, 234, 1), 0 0 80px 40px rgba(240, 147, 251, 0.8) !important;
+            animation: tapPress 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
         .tap-button::before {
             content: '';
             position: absolute;
             inset: -10px;
-            border-radius: 50px;
+            border-radius: 50%;
             background: linear-gradient(45deg, rgba(102, 126, 234, 0.6), rgba(118, 75, 162, 0.6));
             filter: blur(20px);
             opacity: 0;
@@ -371,7 +382,7 @@
             content: '';
             position: absolute;
             inset: 0;
-            border-radius: 50px;
+            border-radius: 50%;
             background: linear-gradient(135deg, rgba(102, 126, 234, 0.3), rgba(118, 75, 162, 0.3));
             filter: blur(15px);
             opacity: 0;
@@ -1210,7 +1221,7 @@
             const button = document.querySelector('.tap-button');
             if(button){
                 button.classList.add('tap-pressed');
-                setTimeout(()=>{if(button)button.classList.remove('tap-pressed');},400);
+                setTimeout(()=>{if(button)button.classList.remove('tap-pressed');},500);
             }
             
             const energy = parseInt(document.getElementById('energy-text').textContent.split('/')[0]);
