--- a/web_app.html
+++ b/web_app.html
@@ -327,20 +327,20 @@
                 filter: brightness(1);
             }
             15% {
-                transform: scale(0.75);
-                filter: brightness(1.15);
-            }
-            30% {
-                transform: scale(1.08);
+                transform: scale(0.92);
                 filter: brightness(1.1);
             }
+            30% {
+                transform: scale(1.03);
+                filter: brightness(1.08);
+            }
             50% {
-                transform: scale(0.98);
+                transform: scale(0.99);
                 filter: brightness(1.05);
             }
             70% {
-                transform: scale(1.05);
-                filter: brightness(1.05);
+                transform: scale(1.02);
+                filter: brightness(1.04);
             }
             100% {
                 transform: scale(1);
@@ -361,7 +361,9 @@
         }
         
         .tap-button.tap-pressed {
-            animation: tapPress 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
+            animation: tapPress 0.3s cubic-bezier(0.25, 1, 0.5, 1);
+            outline: none !important;
+            -webkit-tap-highlight-color: transparent !important;
         }
 
         .tap-button::before {
@@ -1218,7 +1220,7 @@
             const button = document.querySelector('.tap-button');
             if(button){
                 button.classList.add('tap-pressed');
-                setTimeout(()=>{if(button)button.classList.remove('tap-pressed');},500);
+                setTimeout(()=>{if(button)button.classList.remove('tap-pressed');},300);
             }
             
             const energy = parseInt(document.getElementById('energy-text').textContent.split('/')[0]);
