--- a/web_app.html
+++ b/web_app.html
@@ -21,6 +21,15 @@
             padding: 20px;
             position: relative;
             overflow-x: hidden;
+            -webkit-tap-highlight-color: transparent !important;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            user-select: none;
+        }
+        
+        * {
+            -webkit-tap-highlight-color: transparent !important;
+            -webkit-focus-ring-color: transparent !important;
         }
 
         body::before {
@@ -290,7 +299,7 @@
             box-shadow: 0 15px 50px rgba(102, 126, 234, 0.3);
             transition: all 0.08s cubic-bezier(0.25, 1.8, 0.75, 0.5);
             user-select: none;
-            -webkit-tap-highlight-color: transparent;
+            -webkit-tap-highlight-color: transparent !important;
             -webkit-touch-callout: none;
             animation: pulse 2s ease-in-out infinite;
             -webkit-user-select: none;
@@ -300,6 +309,8 @@
             align-items: center;
             justify-content: center;
             overflow: hidden;
+            outline: none !important;
+            -webkit-focus-ring-color: transparent !important;
         }
 
         .tap-button svg {
@@ -362,8 +373,6 @@
         
         .tap-button.tap-pressed {
             animation: tapPress 0.3s cubic-bezier(0.25, 1, 0.5, 1);
-            outline: none !important;
-            -webkit-tap-highlight-color: transparent !important;
         }
 
         .tap-button::before {
@@ -907,7 +916,7 @@
             </div>
         </div>
 
-        <div class="tap-button" onclick="tap()">
+        <button class="tap-button" onclick="tap(); return false;" type="button">
             <svg width="220" height="220" viewBox="0 0 220 220" style="width:100%;height:100%;">
                 <defs>
                     <radialGradient id="tapGrad" cx="50%" cy="50%">
@@ -926,7 +935,7 @@
                 <circle cx="110" cy="110" r="90" fill="none" stroke="#f093fb" stroke-width="2" opacity="0.6"/>
                 <text x="110" y="150" font-size="100" text-anchor="middle" fill="#fff" font-weight="bold" style="filter: drop-shadow(0 0 15px rgba(255, 192, 203, 0.8));">💰</text>
             </svg>
-        </div>
+        </button>
 
 
         <div class="buttons">
