--- a/web_app.html
+++ b/web_app.html
@@ -857,25 +857,51 @@
             font-size: 32px;
             font-weight: 900;
             pointer-events: none;
-            animation: coinFloat 1s ease-out forwards;
+            animation: coinFloat 2s ease-out forwards;
             z-index: 9999;
             color: #ffd700;
-            text-shadow: 0 0 20px rgba(255, 215, 0, 1), 0 0 40px rgba(255, 215, 0, 0.8), 0 0 60px rgba(255, 215, 0, 0.6);
+            text-shadow: 
+                0 0 10px rgba(255, 215, 0, 1),
+                0 0 20px rgba(255, 215, 0, 0.8),
+                0 0 30px rgba(255, 215, 0, 0.6),
+                0 0 40px rgba(255, 215, 0, 0.4),
+                0 0 50px rgba(255, 215, 0, 0.2);
             filter: drop-shadow(0 0 10px rgba(255, 215, 0, 1));
+            will-change: transform, opacity, filter;
+            left: 50% !important;
+            top: 50% !important;
         }
 
         @keyframes coinFloat {
             0% {
                 opacity: 1;
-                transform: translate(-50%, -50%) scale(0.5);
+                transform: translate(-50%, -50%) scale(0.3) rotate(0deg);
+                filter: blur(0px);
+            }
+            15% {
+                opacity: 1;
+                transform: translate(-50%, -100%) scale(0.8) rotate(180deg);
+                filter: blur(2px);
+            }
+            30% {
+                opacity: 1;
+                transform: translate(-50%, -180%) scale(1.3) rotate(360deg);
+                filter: blur(4px);
             }
             50% {
-                opacity: 1;
-                transform: translate(-50%, -150%) scale(1.2);
+                opacity: 0.9;
+                transform: translate(-50%, -280%) scale(1.5) rotate(540deg);
+                filter: blur(6px);
+            }
+            70% {
+                opacity: 0.6;
+                transform: translate(-50%, -380%) scale(1.8) rotate(720deg);
+                filter: blur(8px);
             }
             100% {
                 opacity: 0;
-                transform: translate(-50%, -250%) scale(1);
+                transform: translate(-50%, -500%) scale(2) rotate(1080deg);
+                filter: blur(10px);
             }
         }
 
@@ -1273,8 +1299,15 @@
                         coinAnimation.textContent = '+' + data.reward;
                         coinAnimation.style.left = centerX + 'px';
                         coinAnimation.style.top = centerY + 'px';
+                        // Add random offset for variety
+                        const randomOffset = (Math.random() - 0.5) * 40;
+                        coinAnimation.style.setProperty('--random-x', randomOffset + 'px');
                         document.body.appendChild(coinAnimation);
-                        setTimeout(() => { document.body.removeChild(coinAnimation); }, 1000);
+                        setTimeout(() => { 
+                            if(document.body.contains(coinAnimation)) {
+                                document.body.removeChild(coinAnimation); 
+                            }
+                        }, 2000);
                     }
                     loadData();
                 }
@@ -1907,7 +1940,7 @@
             .then(data => {
                 // Check if auto tap is enabled and still valid
                 const isEnabled = data.auto_tap_enabled;
-                const hasMinEnergy = data.energy > 10; // Minimum 10 energy required
+                const hasMinEnergy = data.energy > 10; // Auto-tap stops at 10 energy
                 
                 if(isEnabled && hasMinEnergy) {
                     const speed = 1000 / (data.auto_tap_speed || 2); // taps per second
@@ -1916,8 +1949,20 @@
                             const energyElement = document.getElementById('energy-text');
                             if(energyElement) {
                                 const energy = parseInt(energyElement.textContent.split('/')[0]);
+                                // Auto-tap stops at 10 energy, manual taps can go to 0
                                 if(energy > 10) {
-                                    tap();
+                                    // Call tap through API directly with auto-flag
+                                    fetch('/api/tap', {
+                                        method: 'POST',
+                                        headers: {'Content-Type': 'application/json'},
+                                        body: JSON.stringify({user_id: user?.id, is_auto: true})
+                                    })
+                                    .then(res => res.json())
+                                    .then(data => {
+                                        if(data.success) {
+                                            loadData();
+                                        }
+                                    });
                                 } else {
                                     clearInterval(window.autoTapInterval);
                                     window.autoTapInterval = null;
