--- a/web_app.html
+++ b/web_app.html
@@ -875,33 +875,58 @@
         @keyframes coinFloat {
             0% {
                 opacity: 1;
-                transform: translate(-50%, -50%) scale(0.3) rotate(0deg);
-                filter: blur(0px);
+                transform: translate(-50%, -50%) scale(0.5) rotate(0deg);
+                filter: blur(0px) brightness(1);
             }
-            15% {
+            10% {
                 opacity: 1;
-                transform: translate(-50%, -100%) scale(0.8) rotate(180deg);
-                filter: blur(2px);
+                transform: translate(-50%, -80%) scale(0.7) rotate(90deg);
+                filter: blur(0px) brightness(1.2);
+            }
+            20% {
+                opacity: 1;
+                transform: translate(-50%, -120%) scale(0.9) rotate(180deg);
+                filter: blur(0px) brightness(1.3);
             }
             30% {
                 opacity: 1;
-                transform: translate(-50%, -180%) scale(1.3) rotate(360deg);
-                filter: blur(4px);
+                transform: translate(-50%, -170%) scale(1.1) rotate(270deg);
+                filter: blur(1px) brightness(1.2);
+            }
+            40% {
+                opacity: 1;
+                transform: translate(-50%, -230%) scale(1.3) rotate(360deg);
+                filter: blur(1px) brightness(1.1);
             }
             50% {
+                opacity: 1;
+                transform: translate(-50%, -300%) scale(1.5) rotate(450deg);
+                filter: blur(2px) brightness(1);
+            }
+            60% {
                 opacity: 0.9;
-                transform: translate(-50%, -280%) scale(1.5) rotate(540deg);
-                filter: blur(6px);
+                transform: translate(-50%, -380%) scale(1.7) rotate(540deg);
+                filter: blur(2px) brightness(0.9);
             }
             70% {
-                opacity: 0.6;
-                transform: translate(-50%, -380%) scale(1.8) rotate(720deg);
-                filter: blur(8px);
+                opacity: 0.7;
+                transform: translate(-50%, -470%) scale(1.9) rotate(630deg);
+                filter: blur(3px) brightness(0.7);
+            }
+            80% {
+                opacity: 0.5;
+                transform: translate(-50%, -570%) scale(2.1) rotate(720deg);
+                filter: blur(4px) brightness(0.5);
+            }
+            90% {
+                opacity: 0.3;
+                transform: translate(-50%, -680%) scale(2.3) rotate(810deg);
+                filter: blur(5px) brightness(0.3);
             }
             100% {
                 opacity: 0;
-                transform: translate(-50%, -500%) scale(2) rotate(1080deg);
-                filter: blur(10px);
+                transform: translate(-50%, -800%) scale(2.5) rotate(900deg);
+                filter: blur(6px) brightness(0);
             }
         }
 
